jobs4u.integrations.plugins.interviewmodel/src/main/antlr4/eapli/ecafeteria/integrations/plugins/interviewModelQuestions/LabeledExprParser.java
package interviewModelQuestions;
// Generated from C:/Users/fabio/OneDrive/Documentos/ISEP_LEI/2o ANO/2º S/LPROG/TRABALHO_PRÁTICO/Exemplo_ANTLR/Questions/LabeledExpr.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LabeledExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, COLON=23, LEFT_BRACE=24, 
		RIGHT_BRACE=25, LEFT_BRACKET=26, RIGHT_BRACKET=27, DASH=28, SLASH=29, 
		COMMENT=30, FLOAT=31, INT=32, BOOL=33, STRING=34, DAY=35, MONTH=36, YEAR=37, 
		DATE=38, TIME=39, WS=40;
	public static final int
		RULE_start = 0, RULE_question = 1, RULE_true_false = 2, RULE_bool_solution = 3, 
		RULE_short_text = 4, RULE_short_text_solution = 5, RULE_case_sensitive = 6, 
		RULE_single_choice = 7, RULE_subquestion = 8, RULE_answer = 9, RULE_matching_solution = 10, 
		RULE_match = 11, RULE_multiple_choice = 12, RULE_numerical_solution = 13, 
		RULE_combinations = 14, RULE_choice_type = 15, RULE_integer_number = 16, 
		RULE_integer_number_solution = 17, RULE_decimal_number = 18, RULE_description = 19, 
		RULE_feedback_text = 20, RULE_feedback_combination = 21, RULE_wrong_answer = 22, 
		RULE_correct_answer = 23, RULE_date = 24, RULE_date_solution = 25, RULE_time = 26, 
		RULE_time_solution = 27, RULE_numeric_scale = 28, RULE_numeric_scale_solution = 29, 
		RULE_error = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "question", "true_false", "bool_solution", "short_text", "short_text_solution", 
			"case_sensitive", "single_choice", "subquestion", "answer", "matching_solution", 
			"match", "multiple_choice", "numerical_solution", "combinations", "choice_type", 
			"integer_number", "integer_number_solution", "decimal_number", "description", 
			"feedback_text", "feedback_combination", "wrong_answer", "correct_answer", 
			"date", "date_solution", "time", "time_solution", "numeric_scale", "numeric_scale_solution", 
			"error"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'TRUE_FALSE'", "'SOLUTION'", "'SHORT_ANSWER'", "'CASE_SENSITIVE:'", 
			"'MATCHING'", "'SUBQUESTION'", "'ANSWER'", "'MULTIPLE_CHOICE'", "','", 
			"'CHOICE_TYPE'", "'single-answer'", "'multiple-answer'", "'INTEGER_NUMBER'", 
			"'FLOAT'", "'DESCRIPTION'", "'FEEDBACK'", "'WRONG_ANSWER'", "'CORRECT_ANSWER'", 
			"'DATE'", "'TIME'", "'NUMERICAL'", "'ERROR'", "':'", "'{'", "'}'", "'['", 
			"']'", "'-'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "COLON", 
			"LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", "RIGHT_BRACKET", "DASH", 
			"SLASH", "COMMENT", "FLOAT", "INT", "BOOL", "STRING", "DAY", "MONTH", 
			"YEAR", "DATE", "TIME", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LabeledExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LabeledExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			question();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public True_falseContext true_false() {
			return getRuleContext(True_falseContext.class,0);
		}
		public Short_textContext short_text() {
			return getRuleContext(Short_textContext.class,0);
		}
		public Single_choiceContext single_choice() {
			return getRuleContext(Single_choiceContext.class,0);
		}
		public Multiple_choiceContext multiple_choice() {
			return getRuleContext(Multiple_choiceContext.class,0);
		}
		public Integer_numberContext integer_number() {
			return getRuleContext(Integer_numberContext.class,0);
		}
		public Decimal_numberContext decimal_number() {
			return getRuleContext(Decimal_numberContext.class,0);
		}
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public Numeric_scaleContext numeric_scale() {
			return getRuleContext(Numeric_scaleContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_question);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Recognizer.EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				true_false();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				short_text();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				single_choice();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				multiple_choice();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 6);
				{
				setState(69);
				integer_number();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 7);
				{
				setState(70);
				decimal_number();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 8);
				{
				setState(71);
				date();
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 9);
				{
				setState(72);
				time();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 10);
				{
				setState(73);
				numeric_scale();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class True_falseContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACE() { return getToken(LabeledExprParser.LEFT_BRACE, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public Bool_solutionContext bool_solution() {
			return getRuleContext(Bool_solutionContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(LabeledExprParser.RIGHT_BRACE, 0); }
		public Feedback_textContext feedback_text() {
			return getRuleContext(Feedback_textContext.class,0);
		}
		public True_falseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_true_false; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterTrue_false(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitTrue_false(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitTrue_false(this);
			else return visitor.visitChildren(this);
		}
	}

	public final True_falseContext true_false() throws RecognitionException {
		True_falseContext _localctx = new True_falseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_true_false);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__0);
			setState(77);
			match(LEFT_BRACE);
			setState(78);
			description();
			setState(79);
			bool_solution();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(80);
				feedback_text();
				}
			}

			setState(83);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bool_solutionContext extends ParserRuleContext {
		public Token id;
		public Token value;
		public Token points;
		public TerminalNode COLON() { return getToken(LabeledExprParser.COLON, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(LabeledExprParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(LabeledExprParser.RIGHT_BRACKET, 0); }
		public TerminalNode INT() { return getToken(LabeledExprParser.INT, 0); }
		public TerminalNode BOOL() { return getToken(LabeledExprParser.BOOL, 0); }
		public TerminalNode FLOAT() { return getToken(LabeledExprParser.FLOAT, 0); }
		public Bool_solutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool_solution; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterBool_solution(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitBool_solution(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitBool_solution(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bool_solutionContext bool_solution() throws RecognitionException {
		Bool_solutionContext _localctx = new Bool_solutionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bool_solution);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__1);
			setState(86);
			((Bool_solutionContext)_localctx).id = match(INT);
			setState(87);
			match(COLON);
			setState(88);
			((Bool_solutionContext)_localctx).value = match(BOOL);
			setState(89);
			match(LEFT_BRACKET);
			setState(90);
			((Bool_solutionContext)_localctx).points = match(FLOAT);
			setState(91);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Short_textContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACE() { return getToken(LabeledExprParser.LEFT_BRACE, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public Case_sensitiveContext case_sensitive() {
			return getRuleContext(Case_sensitiveContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(LabeledExprParser.RIGHT_BRACE, 0); }
		public List<Short_text_solutionContext> short_text_solution() {
			return getRuleContexts(Short_text_solutionContext.class);
		}
		public Short_text_solutionContext short_text_solution(int i) {
			return getRuleContext(Short_text_solutionContext.class,i);
		}
		public Feedback_textContext feedback_text() {
			return getRuleContext(Feedback_textContext.class,0);
		}
		public Short_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_short_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterShort_text(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitShort_text(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitShort_text(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Short_textContext short_text() throws RecognitionException {
		Short_textContext _localctx = new Short_textContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_short_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__2);
			setState(94);
			match(LEFT_BRACE);
			setState(95);
			description();
			setState(96);
			case_sensitive();
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				short_text_solution();
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__1 );
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(102);
				feedback_text();
				}
			}

			setState(105);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Short_text_solutionContext extends ParserRuleContext {
		public Token id;
		public Token value;
		public Token points;
		public TerminalNode COLON() { return getToken(LabeledExprParser.COLON, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(LabeledExprParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(LabeledExprParser.RIGHT_BRACKET, 0); }
		public TerminalNode INT() { return getToken(LabeledExprParser.INT, 0); }
		public TerminalNode STRING() { return getToken(LabeledExprParser.STRING, 0); }
		public TerminalNode FLOAT() { return getToken(LabeledExprParser.FLOAT, 0); }
		public Short_text_solutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_short_text_solution; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterShort_text_solution(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitShort_text_solution(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitShort_text_solution(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Short_text_solutionContext short_text_solution() throws RecognitionException {
		Short_text_solutionContext _localctx = new Short_text_solutionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_short_text_solution);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__1);
			setState(108);
			((Short_text_solutionContext)_localctx).id = match(INT);
			setState(109);
			match(COLON);
			setState(110);
			((Short_text_solutionContext)_localctx).value = match(STRING);
			setState(111);
			match(LEFT_BRACKET);
			setState(112);
			((Short_text_solutionContext)_localctx).points = match(FLOAT);
			setState(113);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Case_sensitiveContext extends ParserRuleContext {
		public Token value;
		public TerminalNode BOOL() { return getToken(LabeledExprParser.BOOL, 0); }
		public Case_sensitiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_case_sensitive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterCase_sensitive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitCase_sensitive(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitCase_sensitive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Case_sensitiveContext case_sensitive() throws RecognitionException {
		Case_sensitiveContext _localctx = new Case_sensitiveContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_case_sensitive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(T__3);
			setState(116);
			((Case_sensitiveContext)_localctx).value = match(BOOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Single_choiceContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACE() { return getToken(LabeledExprParser.LEFT_BRACE, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(LabeledExprParser.RIGHT_BRACE, 0); }
		public List<SubquestionContext> subquestion() {
			return getRuleContexts(SubquestionContext.class);
		}
		public SubquestionContext subquestion(int i) {
			return getRuleContext(SubquestionContext.class,i);
		}
		public List<AnswerContext> answer() {
			return getRuleContexts(AnswerContext.class);
		}
		public AnswerContext answer(int i) {
			return getRuleContext(AnswerContext.class,i);
		}
		public List<Matching_solutionContext> matching_solution() {
			return getRuleContexts(Matching_solutionContext.class);
		}
		public Matching_solutionContext matching_solution(int i) {
			return getRuleContext(Matching_solutionContext.class,i);
		}
		public Feedback_textContext feedback_text() {
			return getRuleContext(Feedback_textContext.class,0);
		}
		public Single_choiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_choice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSingle_choice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSingle_choice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSingle_choice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_choiceContext single_choice() throws RecognitionException {
		Single_choiceContext _localctx = new Single_choiceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_single_choice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__4);
			setState(119);
			match(LEFT_BRACE);
			setState(120);
			description();
			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(121);
				subquestion();
				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__5 );
			setState(127); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(126);
				answer();
				}
				}
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__6 );
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(131);
				matching_solution();
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__1 );
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(136);
				feedback_text();
				}
			}

			setState(139);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubquestionContext extends ParserRuleContext {
		public Token id;
		public Token value;
		public TerminalNode COLON() { return getToken(LabeledExprParser.COLON, 0); }
		public TerminalNode INT() { return getToken(LabeledExprParser.INT, 0); }
		public TerminalNode STRING() { return getToken(LabeledExprParser.STRING, 0); }
		public SubquestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subquestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSubquestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSubquestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSubquestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubquestionContext subquestion() throws RecognitionException {
		SubquestionContext _localctx = new SubquestionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_subquestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__5);
			setState(142);
			((SubquestionContext)_localctx).id = match(INT);
			setState(143);
			match(COLON);
			setState(144);
			((SubquestionContext)_localctx).value = match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnswerContext extends ParserRuleContext {
		public Token id;
		public Token value;
		public TerminalNode COLON() { return getToken(LabeledExprParser.COLON, 0); }
		public TerminalNode INT() { return getToken(LabeledExprParser.INT, 0); }
		public TerminalNode STRING() { return getToken(LabeledExprParser.STRING, 0); }
		public AnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitAnswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerContext answer() throws RecognitionException {
		AnswerContext _localctx = new AnswerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_answer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__6);
			setState(147);
			((AnswerContext)_localctx).id = match(INT);
			setState(148);
			match(COLON);
			setState(149);
			((AnswerContext)_localctx).value = match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
